--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,3 @@
-////
-/// Custom SCSS variables for component-specific styling go here
-////
+$pitch: #231f20;
+$slider-width: 220px;
+$circle-diameter: 14px;
