chore: Placeholder thumb / rail styling

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -1,50 +1,90 @@
 body {
-    padding: 20px;
+  padding: 30px;
 }
 input[type=range] {
-    -webkit-appearance: none;
-
-    /*fix for FF unable to apply focus style bug */
-    border: 1px solid white;
-
-    /*required for proper track sizing in FF*/
-    width: $slider-width;
+  -webkit-appearance: none;
+  width: 220px;
 }
 input[type=range]::-webkit-slider-runnable-track {
-    width: $slider-width;
-    height: 2px;
-    background: $pitch;
-    border: none;
-    border-radius: 3px;
+  width: 220px;
+  height: 4px;
+  background: #ddd;
+  border: none;
+  border-radius: 3px;
 }
 input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    border: none;
-    height: $circle-diameter;
-    width: $circle-diameter;
-    border-radius: 50%;
-    background: $pitch;
-    margin-top: -6px;
+  -webkit-appearance: none;
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid gray;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: white;
+  margin-top: -8px;
 }
 input[type=range]:focus {
-    outline: none;
+  outline: none;
 }
 input[type=range]::-moz-range-track {
-    width: $slider-width;
-    height: 2px;
-    background: $pitch;
-    border: none;
-    border-radius: 3px;
+  width: 220px;
+  height: 4px;
+  background: #ddd;
+  border: none;
+  border-radius: 3px;
 }
 input[type=range]::-moz-range-thumb {
-    border: none;
-    height: $circle-diameter;
-    width: $circle-diameter;
-    border-radius: 50%;
-    background: $pitch;
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid gray;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: white;
 }
+
 /*hide the outline behind the border*/
 input[type=range]:-moz-focusring{
-    outline: 1px solid white;
-    outline-offset: -1px;
+  outline: 1px solid white;
+  outline-offset: -1px;
+}
+
+input[type=range]::-ms-track {
+  width: 220px;
+  height: 4px;
+  background: transparent;
+  border-color: transparent;
+  border-width: 6px 0;
+
+  /*remove default tick marks*/
+  color: transparent;
+}
+input[type=range]::-moz-range-progress {
+  background: yellow
+}
+input[type=range]::-ms-fill-lower {
+  background: yellow;
+  border-radius: 10px;
+}
+input[type=range]::-ms-fill-upper {
+  background: green;
+  border-radius: 10px;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid gray;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: white;
+}
+input[type=range]:focus::-webkit-slider-thumb {
+  border: 1px solid blue;
+  -webkit-box-shadow: 0px 0px 5px red;
+}
+input[type=range]:focus::-moz-range-thumb {
+  border: 1px solid blue;
+  -webkit-box-shadow: 0px 0px 5px red;
+}
+input[type=range]:focus::-ms-thumb {
+  border: 1px solid blue;
+  -webkit-box-shadow: 0px 0px 5px red;
 }
