--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,4 @@
+@import 'node_modules/pearson-elements/scss/variables';
 @import 'src/scss/variables';
 @import 'src/scss/mixins';
 @import 'src/scss/component-specific';
