--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,4 @@
+@import 'node_modules/pearson-elements/scss/mixins/colors';
+@import 'node_modules/pearson-elements/scss/mixins/utilities';
 @import 'node_modules/pearson-elements/scss/variables';
-@import 'src/scss/variables';
-@import 'src/scss/mixins';
 @import 'src/scss/component-specific';
