--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -7,39 +7,43 @@ input[type=range] {
 }
 input[type=range]::-webkit-slider-runnable-track {
   height: 4px;
-  background: $sidewalk;
+  background: pe-color(sidewalk);
   border: none;
 }
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  border: 1px solid $hairline-gray;
+  border: 1px solid pe-color(hairline-gray);
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background: $white;
+  background: pe-color(white);
   margin-top: -8px;
 }
 input[type=range]:focus {
   outline: none;
 }
+input[type=range]::-moz-focus-outer {
+  // bug fix to remove firefox's dotted border
+  border: 0;
+}
 input[type=range]::-moz-range-track {
   height: 4px;
-  background: $sidewalk;
+  background: pe-color(sidewalk);
   border: none;
 }
 input[type=range]::-moz-range-thumb {
   -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  border: 1px solid $hairline-gray;
+  border: 1px solid pe-color(hairline-gray);
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background: $white;
+  background: pe-color(white);
 }
 
 /*hide the outline behind the border*/
 input[type=range]:-moz-focusring{
-  outline: 1px solid $white;
+  outline: 1px solid white;
   outline-offset: -1px;
 }
 input[type=range]::-ms-track {
@@ -51,31 +55,31 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-moz-range-progress {
-  background: $hyperdrive;
+  background: pe-color(hyperdrive);
 }
 input[type=range]::-ms-fill-lower {
-  background: $hyperdrive;
+  background: pe-color(hyperdrive);
 }
 input[type=range]::-ms-fill-upper {
   background: transparent;
 }
 input[type=range]::-ms-thumb {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  border: 1px solid $hairline-gray;
+  border: 1px solid pe-color(hairline-gray);
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background: $white;
+  background: white;
 }
 input[type=range]:focus::-webkit-slider-thumb {
-  border: 1px solid $basic-blue;
-  -webkit-box-shadow: 0px 0px 5px $basic-blue;
+  border: 1px solid pe-color(basic-blue);
+  -webkit-box-shadow: 0px 0px 5px pe-color(basic-blue);
 }
 input[type=range]:focus::-moz-range-thumb {
-  border: 1px solid $basic-blue;
-  -webkit-box-shadow: 0px 0px 5px $basic-blue;
+  border: 1px solid pe-color(basic-blue);
+  -webkit-box-shadow: 0px 0px 5px pe-color(basic-blue);
 }
 input[type=range]:focus::-ms-thumb {
-  border: 1px solid $basic-blue;
-  -webkit-box-shadow: 0px 0px 5px $basic-blue;
+  border: 1px solid pe-color(basic-blue);
+  -webkit-box-shadow: 0px 0px 5px pe-color(basic-blue);
 }
