--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -3,6 +3,7 @@ body {
 }
 input[type=range] {
   -webkit-appearance: none;
+  border: none;
   width: 23%;
 }
 input[type=range]::-webkit-slider-runnable-track {
@@ -32,6 +33,9 @@ input[type=range]::-moz-range-track {
   background: pe-color(sidewalk);
   border: none;
 }
+input[type=range]:focus::-moz-range-track {
+  border: 0;
+}
 input[type=range]::-moz-range-thumb {
   -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border: 1px solid pe-color(hairline-gray);
@@ -39,12 +43,6 @@ input[type=range]::-moz-range-thumb {
   width: 20px;
   border-radius: 50%;
   background: pe-color(white);
-}
-
-/*hide the outline behind the border*/
-input[type=range]:-moz-focusring{
-  outline: 1px solid white;
-  outline-offset: -1px;
 }
 input[type=range]::-ms-track {
   height: 4px;
