--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -22,8 +22,8 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border: 1px solid pe-color(hairline-gray);
-  height: $slider-thumb-radius;
-  width: $slider-thumb-radius;
+  height: $slider-thumb-diameter;
+  width: $slider-thumb-diameter;
   border-radius: 50%;
   background: pe-color(white);
   margin-top: -8px;
@@ -43,8 +43,8 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border: 1px solid pe-color(hairline-gray);
-  height: $slider-thumb-radius;
-  width: $slider-thumb-radius;
+  height: $slider-thumb-diameter;
+  width: $slider-thumb-diameter;
   border-radius: 50%;
   background: pe-color(white);
 }
@@ -62,8 +62,8 @@ input[type=range]::-ms-track {
 input[type=range]::-ms-thumb {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border: 1px solid pe-color(hairline-gray);
-  height: $slider-thumb-radius;
-  width: $slider-thumb-radius;
+  height: $slider-thumb-diameter;
+  width: $slider-thumb-diameter;
   border-radius: 50%;
   background: pe-color(white);
 }
